Added the jpa module
The dependencies including spring-data-jpa, hibernate-jpa-2.1-api,
hibernate, querydsl are updated to the latest stable.

Modifications to source code are made to allow compilation pass. Some
tests still fail.

--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,13 @@
 		<spring.version>5.0.1.RELEASE</spring.version>
 		<slf4j.version>1.7.1</slf4j.version>
 		<logback.version>1.0.6</logback.version>
-		<querydsl.version>2.9.0</querydsl.version>
+		<querydsl.version>4.1.3</querydsl.version>
 		<hamcrest.version>1.3</hamcrest.version>
 	</properties>
 
 	<modules>
 		<module>gemfire</module>
+		<module>jpa</module>
 	</modules>
 
 	<dependencies>
