--- a/gemfire/pom.xml
+++ b/gemfire/pom.xml
@@ -14,11 +14,21 @@
 	</parent>
 
 	<dependencies>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
 
 		<dependency>
-		  <groupId>org.springframework.data</groupId>
-		   <artifactId>spring-data-geode</artifactId>
-		   <version>2.0.1.RELEASE</version>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-geode</artifactId>
+			<version>${spring-data-geode.version}</version>
 		</dependency>
 
 		<dependency>
