--- a/jpa/pom.xml
+++ b/jpa/pom.xml
@@ -3,9 +3,8 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>spring-data-book-jpa</artifactId>
-	
 	<name>Spring Data Book - JPA</name>
-	
+
 	<parent>
 		<groupId>com.oreilly.springdata</groupId>
 		<artifactId>spring-data-book</artifactId>
@@ -14,15 +13,13 @@
 	</parent>
 
 	<dependencies>
-	
 		<!-- Spring & Spring Data JPA -->
-
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
-			<version>2.0.1.RELEASE</version>
+			<version>${spring-data-geode.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
@@ -108,5 +105,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
