--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,13 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spring.version>5.0.1.RELEASE</spring.version>
+		<spring.version>5.2.1.RELEASE</spring.version>
 		<slf4j.version>1.7.1</slf4j.version>
 		<logback.version>1.0.6</logback.version>
 		<querydsl.version>4.1.3</querydsl.version>
 		<hamcrest.version>1.3</hamcrest.version>
+		<spring-data-geode.version>2.2.2.RELEASE</spring-data-geode.version>
+		<log4j.version>2.11.1</log4j.version>
 	</properties>
 
 	<modules>
@@ -48,7 +50,7 @@
 			<artifactId>spring-context</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aop</artifactId>
@@ -109,7 +111,6 @@
 
 	<build>
 		<plugins>
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -125,7 +126,6 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.13</version>
 			</plugin>
-
 		</plugins>
 	</build>
 
